--- a/webpack-study/package.json
+++ b/webpack-study/package.json
@@ -14,7 +14,8 @@
     "clean-webpack-plugin": "^0.1.19",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
     "jquery": "^3.3.1"
