--- a/webpack-study/package.json
+++ b/webpack-study/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "node build/build.js",
-    "dev": "node build/dev.js"
+    "dev:study": "node build/dev.js",
+    "dev": "webpack-dev-server --color --inline --progress --config build/webpack.dev.config.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
