--- a/webpack-study/package.json
+++ b/webpack-study/package.json
@@ -18,8 +18,12 @@
     "babel-preset-env": "^1.7.0",
     "babel-runtime": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "ip": "^1.1.5",
+    "mini-css-extract-plugin": "^0.4.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "style-loader": "^0.23.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
