--- a/webpack-study/package.json
+++ b/webpack-study/package.json
@@ -2,14 +2,13 @@
   "name": "webpack-study",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "build": "node build/build.js",
     "dev:study": "node build/dev.js",
     "dev": "webpack-dev-server --color --inline --progress --config build/webpack.dev.config.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "fwl",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -25,6 +24,7 @@
     "mini-css-extract-plugin": "^0.4.2",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
