--- a/webpack-study/package.json
+++ b/webpack-study/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "node build/build.js",
     "dev:study": "node build/dev.js",
-    "dev": "webpack-dev-server --color --inline --progress --config build/webpack.dev.config.js"
+    "dev1": "webpack-dev-server --color --inline --progress --config build/webpack.dev.config.js",
+    "dev": "webpack-dev-server --config build/webpack.dev.config.js"
   },
   "keywords": [],
   "author": "fwl",
@@ -19,6 +20,7 @@
     "babel-runtime": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "ip": "^1.1.5",
     "mini-css-extract-plugin": "^0.4.2",
