--- a/webpack-study/package.json
+++ b/webpack-study/package.json
@@ -23,6 +23,7 @@
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "ip": "^1.1.5",
+    "mime": "^2.3.1",
     "mini-css-extract-plugin": "^0.4.2",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.23.0",
