--- a/webpack-study/package.json
+++ b/webpack-study/package.json
@@ -21,6 +21,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "ip": "^1.1.5",
     "mime": "^2.3.1",
