--- a/webpack-study/.babelrc
+++ b/webpack-study/.babelrc
@@ -1,10 +1,7 @@
 {
   "presets": [
     ["env", {
-      "modules": false,
-      "targets": {
-        "browsers": ["> 1%", "last 2 versions", "not ie <= 8", "safari >= 7"]
-      }
+      "modules": false
     }]
   ],
   "plugins": ["syntax-dynamic-import", "transform-runtime"]
