--- a/webpack-study/package.json
+++ b/webpack-study/package.json
@@ -12,6 +12,7 @@
   "author": "fwl",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^9.2.0",
     "babel-core": "^6.26.3",
     "babel-loader": "7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -27,6 +28,7 @@
     "mime": "^2.3.1",
     "mini-css-extract-plugin": "^0.4.2",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.17.2",
@@ -36,5 +38,12 @@
   },
   "dependencies": {
     "jquery": "^3.3.1"
-  }
+  },
+
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8",
+    "safari >= 7"
+  ]
 }
