--- a/webpack-study/package.json
+++ b/webpack-study/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-runtime": "^6.26.0",
+    "chalk": "^2.4.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
@@ -27,7 +28,9 @@
     "ip": "^1.1.5",
     "mime": "^2.3.1",
     "mini-css-extract-plugin": "^0.4.2",
+    "node-notifier": "^5.2.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "ora": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
@@ -39,7 +42,6 @@
   "dependencies": {
     "jquery": "^3.3.1"
   },
-
   "browserslist": [
     "> 1%",
     "last 2 versions",
