--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "学习js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha data-structure/stack.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/fanwenlie/coding-notes#readme",
   "dependencies": {
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "mocha": "^6.0.2"
   }
 }
