--- a/scaffold/package.json
+++ b/scaffold/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "scaffolding-study",
+  "name": "scaffold",
   "version": "1.0.0",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "titianium": "bin/titianium"
+    "titanium": "bin/titanium"
   },
   "keywords": [],
   "author": "fwl",
